--- a/artikel/templates/index.html
+++ b/artikel/templates/index.html
@@ -31,3 +31,9 @@ Artikel
     </div>
 
   {% endblock content %}
+
+{% block js %}
+
+<!-- <script src="{% static 'js/artikel.js' %}"></script> -->
+
+{% endblock js %}
