--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,8 +16,8 @@
             <div class="opt">
                 Lokasi
             </div>
-            <div class="opt">   
-                <a href="artikel"> Artikel </a>
+            <div class="opt" id="artikel">   
+                Artikel
             </div>
             <div class="login-btn">
                 LOGIN
@@ -26,3 +26,7 @@
     </div>
 
 </nav>
+
+{% block js %}
+
+{% endblock js %}
