--- a/artikel/static/base_artikel.css
+++ b/artikel/static/base_artikel.css
@@ -4,8 +4,95 @@
     box-sizing: border-box;
 }
 
-.artikel {
-    padding: 30px;
-    background-color: rgb(243, 243, 243);
+body {
+    background-color: rgb(224, 224, 224);
 }
 
+.artikel {
+    padding: 30px;
+    background-color: white;
+}
+
+img {
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 3px;
+}
+
+#id_komen{
+    padding: 5px;
+    width: 60% !important;
+    resize: none;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 4px;
+    max-height: 65px;
+    padding-top: 10px;
+}
+
+h2 {
+    padding-top: 5px;
+}
+
+.box, .btn1, h2, .isi_artikel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.btn1 {
+    padding-top: 5px;
+}
+
+.isi_artikel{
+    width: 100%;
+    font-size: medium;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container, .container1, .judul {
+    max-width: 60%;
+}
+
+.container {
+    flex-direction: column;
+}
+
+.list_komentar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 60%;
+}
+
+.user_name{
+    font-size:14px;
+    font-weight: bold;
+}
+.comments-list .media{
+    border-bottom: 1px dotted #ccc;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.comments {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.comments-list {
+    width: 100%;
+}
+
+.card {
+    padding-bottom: 3px;
+}
+
+.media-body{
+    width: 100%;
+}
