--- a/forum/templates/forum/forum_detail.html
+++ b/forum/templates/forum/forum_detail.html
@@ -41,8 +41,9 @@ Forum | Detail
                     <form method="POST" action="" id="addThreadForm">
                         {% csrf_token %}
                         <div class="row mb-3 mx-4">
-                            <textarea class="form-control" id="komentar" placeholder="Tuliskan diskusi disini"
-                                name="komentar" style="height:200px;"></textarea>
+                            <h3 style="color: white; margin-bottom: 2rem; resize: none !important;">Tuliskan Komentar Anda!</h3>
+                            <textarea no-resize class="form-control" id="komentar" placeholder="Tuliskan diskusi disini"
+                                name="komentar" style="height:300px;"></textarea>
                         </div>
                         <p id='inputForumId' class='visually-hidden'></p>
                     </form>
@@ -56,7 +57,7 @@ Forum | Detail
     </div>
     <!-- Content Row-->
 
-    <div class="komentar">
+    <div class="komentar " style="padding-top: 2rem;padding-bottom: 2rem; border-radius: 24px;">
         <!-- Content will be get fetch by ajax -->
     </div>
     {% endblock content %}
