--- a/swab_vaksin/templates/info_vaksin.html
+++ b/swab_vaksin/templates/info_vaksin.html
@@ -42,18 +42,19 @@
                     <div class='profil'>
                       <div class='pImage'><img  src='' alt=''></div>
                       <div class='pInformation'>
-                        <h3>{{ form.penulis }}</h3>
+                        <h3>{{ informasi_vaksin.penulis }}</h3>
                         <h6>Pekerjaan, umur</h6>
                       </div>
                     </div>
                     <div class='form'> 
-                      <form method='POST' action='{{ form }}' id='addPengalamanForm'>
+                      <form method='POST' action='' id='addPengalamanForm'>
                         {% csrf_token %}
-                        <div class='row mb-3 mx-4' style='height: 300px'>
-                          {{form.pengalamanVaksin}}
-                        </div>
-                        <p id='inputForumId' class='visually-hidden'></p>
-                      </form>
+                        <div class="row mb-3 mx-4">
+                          <textarea class="form-control" id="pengalamanVaksin" placeholder="Tuliskan pengalaman Vaksinmu disini" 
+                          name="pengalamanVaksin" style="height:300px;"></textarea>
+                      </div>
+                      <p id='addPengalamanForm' class='visually-hidden'></p>
+                    </form>
                     </div>
                     <input type='submit' form='addPengalamanForm' class='btn submit-button fw-bold' value='Submit' data-bs-dismiss='modal' />
                   </div>
