--- a/forum/templates/forum/list_forum.html
+++ b/forum/templates/forum/list_forum.html
@@ -34,23 +34,7 @@
 
                 <div class='contain-wrapper'>
                     <div class='cards'>
-                        {% for f in forum %}
-                        <div class='card'>
-                            <div class='crd-header'>
-                                <div class='pImage'><img src="{{f.image}}" alt=""></div>
-                                <div class='pInformation' id='desc'>
-                                    <h5 class="fw-bold">{{ f.title }}</h5>
-                                    <h7>Ditulis oleh: {{ f.writer.first_name }} </h7>
-                                </div>
-                            </div>
-                            <div class='crd-description'>
-                                <p>{{ f.message }}</p>
-                            </div>
-                            <div class='crd-btn'>
-                                <a href="{}">Read More</h6></a>
-                            </div>
-                        </div>
-                        {% endfor %}
+                       <!-- forum -->
                     </div>
                 </div>
             </div>
@@ -64,11 +48,6 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="row mb-3 mx-3">
-                        <!-- <p class="text-white"> {{ forum.writer.first_name }}
-                            <br> {{ forum.writer.pekerjaan }} , {{ forum.writer.umur }}
-                        </p> -->
-                    </div>
                     <form method="POST" action="" id="addThreadForm">
                         {% csrf_token %}
                             <div class="row mb-3 mx-4">
