Add routing in navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
                 About
             </div>
             <div class="opt">
-                Lokasi
+                <a href="lokasi/" > Lokasi </a>
             </div>
             <div class="opt">
                 Artikel
