add userpic forms

--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -41,12 +41,16 @@
                     <label for="floatingInput">Email</label>
                   </div>
                   <div class="form-floating mb-3">
-                    <input type="pekerjaan" class="form-control"  placeholder="pekerjaan kamu" name="pekerjaan" required>
+                    <input type="text" class="form-control"  placeholder="pekerjaan kamu" name="pekerjaan" required>
                     <label for="floatingInput">Pekerjaan</label>
                   </div>
                   <div class="form-floating mb-3">
-                    <input type="umur" class="form-control"  placeholder="umur kamu" name="umur" required>
+                    <input type="text" class="form-control"  placeholder="umur kamu" name="umur" required>
                     <label for="floatingInput">Umur</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="text" class="form-control" placeholder="foto kamu" name="userpic" required>
+                    <label for="floatingInput">Foto Profile</label>
                   </div>
                   <div class="form-floating mb-3">
                     <input type="password" class="form-control" placeholder="Password" name="password1" required>
