--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -12,24 +12,13 @@
     <title>Register Page</title>
 </head>
 <body>
-  {% if messages %}
-  <ul class="messages">
-    {% for message in messages %}
-    <li id="error_text" {% if message.tags %} class="text-{{ message.tags }}" {% endif %}> 
-      {{ message }} </li>
-    {% endfor %}
-  </ul>
-  {% endif %}
-  <p id="error"> </p>
     <div class="container">
         <div class="row">
             <header>
                 <div class="row">
                     <div class="logo-row">
-                        <!-- <div class="d-flex flex-col align-items-center"> -->
                             <img src="{% static 'images/logo.svg' %}" alt="logo swabIn" width="70" height="85">
                             <h3>Swab.In</h3>
-                        <!-- </div> -->
                     </div>
                 </div>
               </header>
@@ -38,6 +27,7 @@
               <div class="card-body p-4 p-sm-5">
                 <form method="POST" action="{% url 'register' %}" id="registerForm">
                   {% csrf_token %}
+                  <p style="color:rgb(233, 43, 10);">{{ message }}</p>
                     <div class="form-floating mb-3">
                         <input type="name" class="form-control"  placeholder="your name" name="first_name" required>
                         <label for="floatingInput">Name</label>
@@ -51,12 +41,16 @@
                     <label for="floatingInput">Email</label>
                   </div>
                   <div class="form-floating mb-3">
-                    <input type="pekerjaan" class="form-control"  placeholder="pekerjaan kamu" name="pekerjaan" required>
+                    <input type="text" class="form-control"  placeholder="pekerjaan kamu" name="pekerjaan" required>
                     <label for="floatingInput">Pekerjaan</label>
                   </div>
                   <div class="form-floating mb-3">
-                    <input type="umur" class="form-control"  placeholder="umur kamu" name="umur" required>
+                    <input type="text" class="form-control"  placeholder="umur kamu" name="umur" required>
                     <label for="floatingInput">Umur</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="text" class="form-control" placeholder="foto kamu" name="userpic" required>
+                    <label for="floatingInput">Foto Profile</label>
                   </div>
                   <div class="form-floating mb-3">
                     <input type="password" class="form-control" placeholder="Password" name="password1" required>
