--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -17,10 +17,8 @@
             <header>
                 <div class="row">
                     <div class="logo-row">
-                        <!-- <div class="d-flex flex-col align-items-center"> -->
                             <img src="{% static 'images/logo.svg' %}" alt="logo swabIn" width="70" height="85">
                             <h3>Swab.In</h3>
-                        <!-- </div> -->
                     </div>
                 </div>
               </header>
@@ -28,6 +26,7 @@
             <div class="card border-0 shadow rounded-3 my-5">
               <div class="card-body p-4 p-sm-5">
                 <form id="loginForm">
+                  <p id="error-message" style="color:rgb(233, 43, 10);"></p>
                   {% csrf_token %}
                   <div class="form-floating mb-3">
                     <input type="username" id="username" class="form-control"  placeholder="username" name="username" required>
@@ -66,13 +65,15 @@
               $.ajax({                                                                                                                           
                 type:"POST",                                                                                                                    
                 url: '/auth/',                                                                                                   
-                data: $('#loginForm').serialize(),                                                                                  
+                data: $('#loginForm').serialize(),                                                               
                 success: function(response){ 
-                  console.log(response)
-                                                                             
+                  if (response.status === "User Login Success") {
+                    location.href = "/";
+                  } else {
+                    $('#error-message').text(response.status);
+                  }
                 }                                                                                                                             
             });
           }
         </script>
-
 </html>
