--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,14 +14,21 @@
                 About
             </div>
             <div class="opt">
-                <a href="lokasi/" > Lokasi </a>
+                <a href="lokasi/"> Lokasi </a>
             </div>
             <div class="opt">
                 Artikel
             </div>
+            {% if not user.is_authenticated %}
             <div class="login-btn">
-                <a href="login/" > LOGIN </a>
+                <a href="login/"> LOGIN </a>
             </div>
+            {% else %}
+            <div class="login-btn">
+                <a href="logout/"> LOG OUT</a>
+            </div>
+            {% endif %}
+
         </div>
     </div>
 
