--- a/artikel/templates/base_artikel.html
+++ b/artikel/templates/base_artikel.html
@@ -28,13 +28,9 @@
     <h2>Komentar</h2>
     <div class="comments">
         <div class="list_komentar">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <!-- comment -->
-                    </div>
-                </div>
-            </div>
+                <div class="cols">
+                
+                </div> 
         </div>
     </div>
 
