--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,14 +16,12 @@
             <div class="opt">
                 Lokasi
             </div>
-            <div class="opt" id="artikel">   
-            <div class="opt">
-                Artikel
+            <div class="opt">   
+            <a href="../artikel">Artikel</a>
             </div>
             <div class="login-btn">
                 <a href="login/" > LOGIN </a>
             </div>
-        </div>
     </div>
 
 </nav>
