fix rendering on forum

--- a/forum/templates/forum/list_forum.html
+++ b/forum/templates/forum/list_forum.html
@@ -20,8 +20,8 @@
                 <div class='iImage'><img src="{{ post_detail.lokasi_pic }}" alt=""></div>
                 <div class='iDescription'>
                     <div class='info-lokasi'>
-                        <h3>{{ post_detail.title }}</h3>
-                        <p>{{ post_detail.content }}</p>
+                        <h3>{{ post_detail.lokasi }}</h3>
+                        <p>{{ post_detail.detail }}</p>
                     </div>
                 </div>
             </div>
